--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -5,9 +5,6 @@
 {/block}
 
 {block name="page-main"}
-<style>
-
-</style>
 <div class="row">
     <div class="col-lg-12">
         <div class="widget">
@@ -17,13 +14,13 @@
                 <span class="widget-caption">表单列表</span>
             </div>
             <div class="widget-body">
-                <div class="table-responsive" style="height: 700px; overflow:scroll;">
+                <div class="table-responsive" style="max-height: 700px;min-height: 200px; overflow:scroll;">
                     <!-- <div class="alert alert-danger">
                         <p>使用word模板的表单无法编辑</p>
                     </div> -->
                     <table class="table table-hover text-nowrap" style="padding: 2px;">
                         <thead>
-                            <tr>
+                            <tr style="border-top: 1px solid rgb(200, 200, 200);border-bottom: 1px solid rgb(200, 200, 200);">
                                 <th>表单名</th>
                                 {present name="$display"}<th>用户名</th>{/present}
                                 <th>状态</th>
@@ -36,10 +33,14 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {volist name="templates" id="vo"}
+                            {volist name="templates" id="vo" empty="还没有表单，快去创建吧"}
                             <tr>
-                                <td><a href="{:url('admin/Template/index',['id'=>$vo.tid,'sid'=>'2'])}" target="_blank"
-                                        style="font-size:14px">{$vo.tname}</a> </td>
+                                <td style=" min-width: 50px;
+                                max-width: 200px;
+                                overflow: hidden;
+                                white-space: nowrap;
+                                text-overflow: ellipsis;"><a href="{:url('admin/Template/index',['id'=>$vo.tid,'sid'=>'2'])}" target="_blank"
+                                        style="font-size:14px" title="{$vo.tname}">{$vo.tname}</a> </td>
                                 {present name="$display"}<td>{$vo.get_user.username}</td>{/present}
 
                                 {if $vo.status==1}
@@ -155,7 +156,7 @@
 
 
     $(".shareImg").click(function () {
-        var img = '<img src="'+$(this).attr('dataid')+'">'
+        var img = '<img src="' + $(this).attr('dataid') + '">'
         layer.open({
             type: 1,
             title: false,
@@ -164,7 +165,7 @@
             // area: ['auto'],
             skin: 'layui-layer-nobg', //没有背景色
             shadeClose: true,
-            content:img
+            content: img
         });
     })
 </script>
