--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -56,7 +56,7 @@
                             laydate.render({
                                 elem: '#' + "{$key}" //指定元素
                                 , type: 'date'
-                                ,formact:'yyyy年MM月dd日'
+                                , formact: 'yyyy年MM月dd日'
                                 // , min: date.toLocaleString(),
                             });
                         </script>
@@ -123,6 +123,19 @@
                     <input type="hidden" name="recordid" id="recordid" value=>
                 </form>
             </div>
+        </div>
+    </div>
+    <style type="text/css">
+        .footer {
+            height: 20px;
+            margin-top: 50px;
+            text-align: center;
+        }
+    </style>
+    <div class="footer">
+        <div class="validation" style="font-size:12px;">
+            <span>备案号:</span><a style="color:#444;" rel="nofollow noopener" target="_blank"
+                href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
         </div>
     </div>
 
