--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -30,6 +30,33 @@
             </div>
         </div>
     </div>
+    <style>
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 20px;
+            clear: both;
+        }
+
+        .footer .part_two {
+            position: relative;
+            z-index: 10;
+        }
+
+        .footer .validation {
+            text-align: center;
+            height: 20px;
+        }
+    </style>
+    <div class="footer">
+        <div class="part_two">
+            <div class="validation" style="font-size:12px;">
+                <span>备案号:</span><a style="color:#444;" rel="nofollow noopener" target="_blank"
+                    href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
