--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -97,19 +97,19 @@
             clear: both;
         }
 
-        .footer .part_two {
+        .icp-p {
             position: relative;
-            z-index: 10;
+            z-index: 100;
         }
 
-        .footer .validation {
+        .icp{
             text-align: center;
             height: 20px;
         }
     </style>
     <div class="footer">
-        <div class="part_two">
-            <div class="validation" style="font-size:12px;">
+        <div class="icp-p">
+            <div class="icp" style="font-size:12px;">
                 <span>备案号:</span><a style="color:#444;" rel="nofollow noopener" target="_blank"
                     href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
             </div>
