--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -133,7 +133,7 @@
         }
     </style>
     <div class="footer">
-        <div class="validation" style="font-size:12px;">
+        <div style="font-size:12px;">
             <span>备案号:</span><a style="color:#444;" rel="nofollow noopener" target="_blank"
                 href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
         </div>
