完善帮助手册

--- a/application/admin/view/home/help.html
+++ b/application/admin/view/home/help.html
@@ -43,7 +43,7 @@
                         <h4>手动创建</h4>
                         <p>
                             在&nbsp;<a href="{:url('admin/templates/add')}">新建表单</a>&nbsp;页面点击<a
-                                href="{:url('admin/Hand/index')}">手动创建</a>,可以选择添加<strong>文本框</strong>或者<strong>下拉菜单</strong>,并且<strong>文本框</strong>支持自定义数据类型,目前支持普通文本、邮箱、数字、手机号或者非必填
+                                href="{:url('admin/Hand/index')}">手动创建</a>,可以选择添加<strong>文本框</strong>或者<strong>下拉菜单</strong>,并且<strong>文本框</strong>支持自定义数据类型,目前支持普通文本、邮箱、数字、手机号、日期、时间或者非必填
                         </p>
                         <p>
                             在初始化之前还可以在右侧选择作为记录ID的字段，它是表单数据的唯一标识字段，值是唯一的，后续提交时，可以覆盖已存在唯一字段值的记录，并且记录最近更新的时间
@@ -96,7 +96,7 @@
                 <hr>
                 <h3 id="myData"> 我的数据集</h3>
                 <p>
-                    通过这个功能，能够创建自定义数据集，作为表单唯一字段的对照数据，唯一标识字段不在数据集中的无法提交;在创建表单时可以为唯一标识字段指定
+                    通过这个功能，能够创建自定义数据集，作为表单唯一字段的对照数据，唯一标识字段不在数据集中的无法提交;在创建表单时可以为唯一标识字段指定，例如学号，当填写的学号不在设置的学号中，无法完成提交
                 </p>
 
                 <hr>
@@ -112,7 +112,7 @@
                     <li>
                         <h4>excel导入</h4>
                         <p>
-                            在&nbsp;<a href="{:url('admin/MyData/create')}">新建数据集</a>&nbsp;页面可以选择包含数据集的Excel文件，同样一行一条
+                            在&nbsp;<a href="{:url('admin/MyData/create')}">新建数据集</a>&nbsp;页面可以选择包含数据集的Excel文件，同样一行一条，不带列名
                         </p>
                     </li>
                 </ul>
