完善帮助手册

--- a/application/admin/view/home/help.html
+++ b/application/admin/view/home/help.html
@@ -120,7 +120,7 @@
                 <hr>
                 <h3 id="shareForm">分享表单</h3>
                 <p>
-                    在表单列表或者单个表单的数据展示页面点击<strong>分享<span class="fa fa-share"></span></strong>按钮，将表单链接分享出去
+                    在表单列表或者单个表单的数据展示页面点击<strong>分享<span class="fa fa-share"></span></strong>按钮，将表单链接分享出去，也可将二维码截图分享
                 </p>
 
                 <hr>
@@ -133,7 +133,7 @@
                 <h3 id="exportData">导出表单数据</h3>
                 <p>
                     在单个表单的数据展示页面点击右上角<strong>导出</strong> <i
-                        class="glyphicon glyphicon-export icon-share"></i>按钮，导出表单数据,默认导出全部数据，有<strong>.csv</strong>和<strong>.xlsx</strong>两种格式
+                        class="glyphicon glyphicon-export icon-share"></i>按钮，导出全部表单数据
                 </p>
                 <h3 id="deleteData">删除表单数据</h3>
                 <p>
