表单增加修改

--- a/application/admin/view/templates/edit.html
+++ b/application/admin/view/templates/edit.html
@@ -47,8 +47,7 @@
                                         {notpresent name="$option.options"}
                                         <td><label for="{$key}" class="control-label">规则</label></td>
                                         <td style="width: 25%;">
-                                            <select class="form-control input-type" dataid="{$key}"
-                                                name="{$key}_rule">
+                                            <select class="form-control input-type" dataid="{$key}" name="{$key}_rule">
                                                 <option value="{$option.rule}">{$option.rule|getFieldType}</option>
                                                 <option value="input|required">普通文本</option>
                                                 <option value="phone|required">手机号</option>
@@ -61,36 +60,45 @@
                                             </select>
                                         </td>
                                         {else /}
+                                        <td>
+                                            <textarea required="true" id="{$key}_childs" class="form-control hidden"
+                                                rows="4" cols="3"></textarea>
+                                            <a class="confirm hidden" id="{$key}_confirm" dataid="{$key}" onclick="confirmEditSelect('{$key}')">确认</a>
+                                            <a class="editOptions" id="{$key}_edit" dataid="{$key}" onclick="editSelect('{$key}')">修改</a>
+                                        </td>
                                         <td style="width: 50px;">
-                                        <input type="text" class="hidden" value="select|required" name="{$key}_rule">
+                                            <input type="text" class="hidden" value="select|required"
+                                                name="{$key}_rule">
 
                                             <select class="form-control" required="true" id="{$key}_options">
                                                 {volist name="option.options" id="vo"}
                                                 <option name="{$key}">{$vo}</option>
                                                 {/volist}
                                             </select>
-                                            {volist name="option.options" id="vo"}
+                                            <!-- {volist name="option.options" id="vo"}
                                             <input type="text" value="{$vo}" name="{$key}" class="hidden">
-                                            {/volist}
+                                            {/volist} -->
                                         </td>
+
                                         {/notpresent}
                                     </tr>
                                     {/volist}
                                 </table>
 
-                            <input type="text" class="hidden" name="tid" id="tid" value="{$tInfo.tid}">
+                                <input type="text" class="hidden" name="tid" id="tid" value="{$tInfo.tid}">
                             </form>
                             <button id="addInput" class="btn btn-info">添加文本框</button>
                             <button id="addSelect" class="btn btn-info">添加下拉菜单</button>
                         </div>
                     </div>
-                    
+
                     <input type="hidden" id="formType" value="edit">
                     <input type="hidden" name="beginId" id="beginId" value="{$formLength}">
 
                     <div class="col-lg-3">
                         {include file="public/form_right" /}
-                        <button dataid="{:url('admin/Templates/edit')}" class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
+                        <button dataid="{:url('admin/Templates/edit')}" class="btn btn-success initTemplate"
+                            type="button"><span class="fa fa-table"></span>
                             确认更改表单</button>
                     </div>
                 </div>
@@ -98,6 +106,7 @@
         </div>
     </div>
 </div>
+
 {/block}
 
 {block name="page-js"}
