--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta itemprop="name" content="{$tname}">
-    <meta name="description" itemprop="description" content="{$tname}">
+    <meta itemprop="name" content="{$template.tname}">
+    <meta name="description" itemprop="description" content="{$template.tname}">
     <meta name="author" content="Li Jian">
     <link rel="shortcut icon" type="IMG/x-icon" href="/favicon.ico" />
     <title>{$template.tname}</title>
