完善表单编辑（select)

--- a/application/admin/view/public/form_js.html
+++ b/application/admin/view/public/form_js.html
@@ -1,6 +1,6 @@
 <script src="__JS__/jquery.validate.min.js"></script>
 <script src="__JS__/messages_zh.min.js"></script>
-<script src="__LIB__/design/designForm.js"></script>
+<script src="__LIB__/design/designForm.js?v=1.02"></script>
 <script src="__LIB__/laydate/laydate.js"></script>
 
 <script>
