--- a/application/admin/view/my_data/index.html
+++ b/application/admin/view/my_data/index.html
@@ -11,7 +11,8 @@
     <div class="col-lg-6">
         <div class="widget">
             <div class="widget-header bg-themeprimary">
-                <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Home/index\')}';"/></i>
+                <i class="fa fa-arrow-left widget-icon"
+                    onClick="window.location.href='{:url(\'admin/Home/index\')}';" /></i>
                 <span class="widget-caption">数据集列表</span>
             </div>
             <div class="widget-body">
@@ -30,26 +31,27 @@
                         <tbody>
                             {volist name="dataSetList" id="vo"}
                             <tr>
-                                <td><a href="{:url('admin/MyData/read',['id'=>$vo.id])}" style="font-size:14px">{$vo.title}</a> </td>
+                                <td><a href="{:url('admin/MyData/read',['id'=>$vo.id])}"
+                                        style="font-size:14px">{$vo.title}</a> </td>
                                 {present name="$display"}<td>{$vo.get_user.username}</td>{/present}
                                 <td>{$vo.count}</td>
                                 <td>
-                                    <a href="#" class="btn btn-darkorange btn-xs del-data"
-                                        dataid="{$vo.id}"">删除</a>
-                                    <a href="{:url('admin/MyData/read',['id'=>$vo.id])}"
-                                        class="btn btn-xs btn-success"><span
-                                            class="fa fa-table"></span>数据</a>
+                                    <a href="#" class="btn btn-darkorange btn-xs del-data" dataid="{$vo.id}"">删除</a>
+                                    <a href=" {:url('admin/MyData/read',['id'=>$vo.id])}"
+                                        class="btn btn-xs btn-success"><span class="fa fa-table"></span>数据</a>
+                                    <a href="{:url('admin/MyData/append',['id'=>$vo.id])}"
+                                        class="btn btn-xs btn-info"><span class=""></span>追加数据</a>
                                 </td>
                                 <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
                             </tr>
                             {/volist}
-        
+
                         </tbody>
                     </table>
                 </div>
-               <div class="text-align-right" style="margin-top: 20px;">
-                <a href="{:url('admin/MyData/create')}" class="btn btn-success">添加</a>
-               </div>
+                <div class="text-align-right" style="margin-top: 20px;">
+                    <a href="{:url('admin/MyData/create')}" class="btn btn-success">添加</a>
+                </div>
             </div>
         </div>
     </div>
@@ -60,7 +62,7 @@
 <script>
     $(".del-data").click(function () {
         var id = $(this).attr('dataid');
-        confirm('确定删除吗？','删除数据',"{:url('admin/MyData/delete')}",{id: id})
+        confirm('确定删除吗？', '删除数据', "{:url('admin/MyData/delete')}", { id: id })
     })
 </script>
 {/block}
