--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -117,8 +117,8 @@
                         <div class="btn-group">
                             <select name="exportType" class="btn" id="exportType" style="height: 32px;">
                                 <option value="all" selected>全部</option>
-                                <option value="today_update">今日更新</option>
-                                <option value="today_add">今日新增</option>
+                                <!-- <option value="today_update">今日更新</option>
+                                <option value="today_add">今日新增</option> -->
                             </select>
                             <button id="export" class="btn btn-primary" dataid="{$template.tid}">
                                 <span class="fa fa-file-excel-o"></span>导出
