数据导出优化

--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -117,6 +117,7 @@
                         <div class="btn-group">
                             <select name="exportType" class="btn" id="exportType" style="height: 32px;">
                                 <option value="all" selected>全部</option>
+                                <option value="all_update">今日更新</option>
                                 <!-- <option value="today_update">今日更新</option>
                                 <option value="today_add">今日新增</option> -->
                             </select>
