--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -158,6 +158,7 @@
             url: "{:url('admin/Template/dataList')}",
             method: "post", //请求方式（*）
             toolbar: "#toolbar", //工具按钮用哪个容器
+            sortName: 'update_time',
             striped: false, //是否显示行间隔色
             cache: false, //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
             pagination: true, //是否显示分页（*）
